[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"
name = "nail"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
rtt-target = {version = "0.2.2", features = ["cortex-m"]}
stm32f7xx-hal = {version = "0.2.0", features = ["stm32f767", "rt"], git = "https://github.com/stm32-rs/stm32f7xx-hal.git"}

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK
